static/css/index.css
/************* hero and search bar *************/

/* hero banner */
.hero-bg{
    background-image: url('../images/welcome.png'), linear-gradient(135deg, #AADDEE, #66AABB);
    background-position: bottom left 80%, top;
    background-size: contain, cover;
    background-repeat: no-repeat, no-repeat;
    width:100%;
    height: 320px;
}

.hero-container{
    max-width: 1200px;
    width: 90%;
    margin: 0 auto;
    padding: 10px;
    color: #F8F8F8;
}

.hero-container h2{
    font-size: 28px;
    font-weight: 700;   
    margin-top: 85px; 
}

.hero-container p{
    font-size: 16px;
    font-weight: 400;
    margin-top:15px;
}


/* search bar */
.search-form{
    margin-top:25px;
    display: flex;
}

.search-input{
    padding:15px;
    font-size:16px;
    color:#000;
    border-radius: 5px 0 0 5px;
    width:400px;
    outline:none;
    line-height: 16px;
    height:46px;
    box-shadow: 0 0 20px #AABBCC;
}

.search-input::placeholder{
    color:#757575;
}

.search-btn{
    background-color:#448899;
    display: flex;
    justify-content:center;
    align-items:center;
    width:60px;
    height:46px;
    border-radius: 0 5px 5px 0;
    transition:background-color 0.2s;
    outline:none;
    cursor: pointer;
}

.search-btn:hover{
    background-color:#337788;
}

.search-btn:active{
    background-color: #66AABB;
}

.search-btn img{
    width:30px;
    height:30px;
}

/************* attractions gallery *************/

.attractions-container{
    width: 90%;
    max-width: 1200px;
    margin: 55px auto;
    display: flex;
    flex-wrap: wrap;
}

.attraction-box{
    margin:15px;
    width: calc(25% - 30px);
    background-color: #fff;
    border-radius:5px;
    overflow:hidden;
    border: 1px solid #E8E8E8;
    transition:box-shadow 0.2s;
}

.attraction-box:hover{
    box-shadow: 0 0 20px #aabbcc86;
}

.attraction-box a{
    text-decoration:none;
    cursor: pointer;
    display: block;
}

.attraction-box img{
    width:100%;
    object-fit: cover;
    object-position: 50% 50%;
    overflow: hidden;
    height:162px;
}

.attraction-text-container{
    margin: 0 10px;
    display: flex;
    flex-direction: column;
    font-size: 16px;
    color: #757575;
}

.attraction-title{
    margin:13px 0 15px;
    font-weight: 700;
}

.attraction-info{
    display: flex;
    justify-content:space-between;
    margin:auto 0 12px;
    font-weight: 400;
    height:100%;
}

.attractions-container span{
    color: #757575;
    margin: 0 auto;
}

/***************************************/
/************* media query *************/
/***************************************/

/* for smaller desktop screen */
@media only screen and (max-width:1333px){

    .hero-bg{
        background-position: bottom right, top;
        background-size: 60%, cover;
    }

    .attraction-box{
        width: calc(100% / 3 - 30px);
    }

    .attraction-box img{
        height: calc((100vw / 3 - 30px) * 0.6) ;
    }

}


@media only screen and (max-width:1000px){

    .hero-bg{
        background-position: bottom right -20%, top;
        background-size: 60%, cover;
    }

    .attraction-box{
        width: calc(50% - 30px);
    }

    .attraction-box img{
        height: calc((50vw - 30px) * 0.6) ;
    }

}

@media only screen and (max-width:600px){

    .hero-bg{
        background-position: bottom right -25vw, top;
        background-size: 90vw, cover;
    }

    .search-input{
        width:230px;
    }
    
    .attractions-container{
        margin:55px 19px;
    }

    .attraction-box{
        width: 100%;
    }

    .attraction-box img{
        height: calc((100vw - 38px) * 0.6) ;
    }

}

